manifests/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.home
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: web
        path: /
  tls:
  - hosts:
    - alertmanager.home
