manifests/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.home
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - hosts:
    - grafana.home
