manifests/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus.home
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus.home
